--- a/index.html
+++ b/index.html
@@ -98,7 +98,27 @@
             </nav>
 
             <h1>Welcome to AEGuides</h1>
-            <p></p>
+             
+            <div class="line"></div>
+              <!-- Start of  -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="vwc" class="anchor text-center">AEGuides</h2>
+                </div>
+                <div class="flex-container">
+                  <div>
+                    <img class="responsive-logo" src="Images/Logo/AE_Logo.png" alt="AE_Logo"> 
+                  </div>
+                  <div class="card-body">
+                    <p>
+                      Aeguides is a fansite deacated to the game <a href="https://www.ashenempires.com/" target="_blank" class="a-bottom-border">Ashen Empires</a>.
+                      Our goal is to provide the best information of the game for all to use in there adventures.
+                    </p>  
+                  </div>
+                </div>
+              </div>
+              <!-- End of -->
+            
             <p></p>
             <div class="line"></div>
 
