--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Ashen Empires Guides">
-    <meta name="keywords" content="Ashen Empires, Quest, Guides, Role Playing, MMORPG">
+    <meta name="description" content="Ashen Empires Guides is a fansite dedicated to the game Ashen Empires.
+    Our goal is to provide the best information of the game for all to use in there adventures.">
+    <meta name="keywords" content="Ashen Empires, Quest, Guides, Role Playing, MMORPG, Ashen Empires Quests, Ashen Empires Quest, Ashen Empires Guides">
     <meta name="author" content="Keith Heffington">
 
     <title>AEGuides</title>
