Added Monster Hunter Information

--- a/guides.html
+++ b/guides.html
@@ -54,6 +54,14 @@
                         </li>
                     </ul>
                 </li>
+                <li class="active">
+                    <a href="#monsterSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Monsters</a>
+                    <ul class="collapse list-unstyled" id="monsterSubmenu">
+                        <li>
+                            <a href="valinorMonsters.html">Valinor</a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
         </nav>
 
