Grouped by Monster Type

--- a/valinorMonsters.html
+++ b/valinorMonsters.html
@@ -59,7 +59,7 @@
                             <a href="#dairyCow">Dairy Cow</a>
                         </li>
                         <li>
-                            <a href="#grassViper">grass Viper</a>
+                            <a href="#grassViper">Grass Viper</a>
                         </li>
                     </ul>
                 </li>
@@ -242,14 +242,10 @@
                 <div class="card-header">
                   <h1 id="valinorMonsters" class="anchor text-center">Valinor Monsters</h1>
                 </div>
-                
+                <div class="card-header">
+                  <h2 id="animals" class="anchor text-center">Animal</h2>
+                </div>
                 <div class="flex-wrapper text-center">
-                  <a class="border-box" href="#bat">
-                  <div >
-                    <p>Bat</p>
-                    <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Bat_Hunter.png" alt="Bat">  
-                  </div>
-                  </a>
                   <a class="border-box" href="#bull">
                   <div >
                     <p>Bull</p>
@@ -273,20 +269,130 @@
                     <p>Dairy Cow</p>
                     <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Dairy_Cow_Hunter.png" alt="Dairy Cow">  
                   </div>
-                  </a>
-                  <a class="border-box" href="#dredgeSpider">
-                  <div >
-                    <p>Dredge Spider</p>
-                    <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Dredge_Spider_Hunter.png" alt="Dredge Spider">  
+                  </a>  
+                  <a class="border-box" href="#grassViper">
+                    <div >
+                      <p>Grass Viper</p>
+                      <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Grass_Viper_Hunter.png" alt="Grass Viper">  
+                    </div>
+                    </a>
+                </div> 
+                <div class="card-header">
+                  <h2 id="animals" class="text-center">Goblin</h2>
+                </div>
+                <div class="flex-wrapper text-center"> 
+
+                  <a class="border-box" href="#goblinBlacksmith">
+                  <div>
+                    <p>Goblin Blacksmith</p>
+                    <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Goblin_Blacksmith_Hunter.png" alt="Goblin Blacksmith">  
                   </div>
                   </a>
-                  <a class="border-box" href="#dredgeSpider">
-                  <div >
+                  <a class="border-box" href="#goblincarpenter">
+                  <div>
                     <p>Goblin Carpenter</p>
                     <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Goblin_Carpenter_Hunter.png" alt="Goblin Carpenter">  
                   </div>
                   </a>
-                
+                  <a class="border-box" href="#goblinFarmer">
+                  <div>
+                    <p>Goblin Farmer</p>
+                    <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Goblin_Farmer_Hunter.png" alt="Goblin Farmer">  
+                  </div>
+                  </a>
+                  <a class="border-box" href="#goblinLeatherworker">
+                  <div>
+                    <p>Goblin Leatherworker</p>
+                    <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Goblin_Leatherworker_Hunter.png" alt="Goblin Leatherworker">  
+                  </div>
+                  </a>
+                  <a class="border-box" href="#goblinRunt">
+                  <div>
+                    <p>Goblin Runt</p>
+                    <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Goblin_Runt_Hunter.png" alt="Goblin Carpenter">  
+                  </div>
+                  </a>
+                  <a class="border-box" href="#goblinShamanRunt">
+                  <div>
+                    <p>Goblin Shaman Runt</p>
+                    <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Goblin_Shaman_Runt_Hunter.png" alt="Goblin Shaman Runt">  
+                  </div>
+                  </a>
+                  <a class="border-box" href="#goblinWorker">
+                  <div>
+                    <p>Goblin Worker</p>
+                    <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Goblin_Worker_Hunter.png" alt="Goblin Worker">  
+                  </div>
+                  </a>
+                  <a class="border-box" href="#youngHobgoblin">
+                  <div >
+                    <p>Young Hobgoblin</p>
+                    <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Young_Hobgoblin_Hunter.png" alt="Young Hobgoblin">  
+                  </div>
+                  </a>
+                </div>
+                  <div class="card-header">
+                    <h2 id="animals" class="text-center">Insect</h2>
+                  </div>
+                  <div class="flex-wrapper text-center"> 
+                  <a class="border-box" href="#dredgeSpider">
+                  <div >
+                      <p>Dredge Spider</p>
+                      <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Dredge_Spider_Hunter.png" alt="Dredge Spider">  
+                  </div>
+                  </a>    
+                  <a class="border-box" href="#spider">
+                  <div >
+                      <p>Spider</p>
+                      <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Spider_Hunter.png" alt="Spider">  
+                  </div>
+                  </a>
+                  <a class="border-box" href="#triddle">
+                  <div >
+                      <p>Triddle</p>
+                      <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Triddle_Hunter.png" alt="Triddle">  
+                  </div>
+                  </a>
+                </div>
+                  <div class="card-header">
+                    <h2 id="animals" class="text-center">Undead</h2>
+                  </div>
+                <div class="flex-wrapper text-center">  
+                  <a class="border-box" href="#skeletalApprentice">
+                  <div >
+                    <p>Skeletal Apprentice</p>
+                    <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Skeletal_Apprentice_Hunter.png" alt="Skeletal Apprentice">  
+                  </div>
+                  </a>
+                  <a class="border-box" href="#skeletalPup">
+                  <div >
+                    <p>Skeletal Pup</p>
+                    <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Skeletal_Pup_Hunter.png" alt="Skeletal Pup">  
+                  </div>
+                  </a>
+                  <a class="border-box" href="#smallSkeleton">
+                  <div >
+                    <p>Small Skeleton</p>
+                    <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Small_Skeleton_Hunter.png" alt="Small Skeleton">  
+                  </div>
+                  </a>
+                </div>
+                  <div class="card-header">
+                    <h2 id="animals" class="text-center">Vermin</h2>
+                  </div>
+                <div class="flex-wrapper text-center">  
+                  <a class="border-box" href="#bat">
+                  <div >
+                    <p>Bat</p>
+                    <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Bat_Hunter.png" alt="Bat">  
+                  </div>
+                  </a>
+                  <a class="border-box" href="#snake">
+                  <div >
+                    <p>Snake</p>
+                    <img class="npc-img" src="Images/Valinor/Monsters/HunterBook/Snake_Hunter.png" alt="Snake">  
+                  </div>
+                  </a>
                 </div>  
               </div>
               <!-- End of Valinor Monsters -->
@@ -297,42 +403,17 @@
               <!-- Start of Bat -->
               <div class="card bg-main half-width mb-5">
                 <div class="card-header">
-                  <h2 id="bat" class="anchor text-center">Bat</h2>
+                  <h2 id="bull" class="anchor text-center">Bull</h2>
                 </div>
                 <div class="flex-container">
                   <div>
-                    <img src="Images/Valinor/Monsters/HunterBook/Bat_HunterBook.png" alt="Bat Hunter Book">  
+                    <img src="Images/Valinor/Monsters/HunterBook/Bull_HunterBook.png" alt="Bull Hunter Book">  
                   </div>
                   <div class="card-body">
-                    <table class="table table-sm table-bordered text-center">
-                        <thead class="thead-light">
-                          <tr>
-                            <th>Level</th>
-                            <th>Type</th>
-                            <th>Boss</th>
-                            <th>Drops</th>
-                          </thead>    
-                          </tr>
-                          <tr>
-                            <td>
-                              1
-                            </td>
-                            <td>
-                              Vermin                         
-                            </td>
-                            <td>
-                              No
-                            </td>
-                            <td>
-                            <img class="thumbnail-img" src="Images/Valinor/Items/Armor/Tunic_of_the_Island_Guard.png" alt="Tunic of the Island Guard" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Armor/Tunic_of_the_Island_Guard_Stats.png' alt='Tunic of the Island Guard'>">
-                            <img class="thumbnail-img" src="Images/Valinor/Items/Armor/Smock_of_the_Island_Guard.png" alt="Smock of the Island Guard" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Armor/Smock_of_the_Island_Guard_Stats.png' alt='pants'>">
-                            <img class="thumbnail-img" src="Images/Valinor/Items/Armor/Pants.png" alt="Pants" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Armor/Pants_Stats.png' alt='pants'>">
-                            <img class="thumbnail-img" src="Images/Valinor/Items/Armor/Boots_of_the_Island_Guard.png" alt="Boots of the Island Guard" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Armor/Boots_of_the_island_Guard_Stats.png' alt='Boots of the Island Guard'>"> 
-                            <img class="thumbnail-img" src="Images/Valinor/Items/Items/Sextant.png" alt="Sextant" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Items/Sextant_Stats.png' alt='Boots of the Island Guard'>">
-                            <img class="thumbnail-img" src="Images/Valinor/Items/Items/Large_Knapsack.png" alt="Large Knapsack" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/Valinor/Items/Items/Large_Knapsack_Stats.png' alt='Boots of the Island Guard'>">
-                            <br>                         
-                          </td>                        
-                      </table>
+                    <p>Level: 7</p>
+                    <p>Health: 98</p>
+                    <p>Class: Animal</p>
+                    <p>Damage Type: Pierce</p>
                   </div>
                 </div>
               </div>
