Added the num colors to Quest NPCS

--- a/valinorQuest.html
+++ b/valinorQuest.html
@@ -335,79 +335,79 @@
                 <div class="flex-wrapper">
                   
                   <div>
-                    <p><a href="#welcomeToAshenEmpires"><span class="num-color">1.</span> Duke Randolf</a></p>
+                    <p><a href="#welcomeToAshenEmpires"><span class="num-color-teal">1.</span> Duke Randolf</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/Duke_Randolf.png" alt="Duke Randolf">  
                   </div>
                   <div>
-                    <p><a href="#kumbaPendant"><span class="num-color">2.</span> Kumba Northern</a></p>
+                    <p><a href="#kumbaPendant"><span class="num-color-teal">2.</span> Kumba Northern</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/Kumba_Northern.png" alt="Kumba Northern">  
                   </div>
                   <div>
-                    <p><a href="#strangeFascination"><span class="num-color">3.</span> Mary Locksley</a></p>
+                    <p><a href="#strangeFascination"><span class="num-color-teal">3.</span> Mary Locksley</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/Mary_Locksley.png" alt="Mary Locksley">  
                   </div>
                   <div>
-                    <p><a href="#theNecklace"><span class="num-color">4.</span> Douglas Logan</a></p>
+                    <p><a href="#theNecklace"><span class="num-color-teal">4.</span> Douglas Logan</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/Douglas_Logan.png" alt="Douglas Logan">  
                   </div>
                   <div>
-                    <p><a href="#ourLittleSpiderProblem"><span class="num-color">5.</span> Serina Wilcut</a></p>
+                    <p><a href="#ourLittleSpiderProblem"><span class="num-color-teal">5.</span> Serina Wilcut</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/Serina_Wilcut.png" alt="Serina Wilcut">  
                   </div>
                   <div>
-                    <p><a href="#theRing"><span class="num-color">6.</span> Shady Looking Man</a></p>
+                    <p><a href="#theRing"><span class="num-color-teal">6.</span> Shady Looking Man</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/Shady_Looking_Man.png" alt="Shady Looking Man">  
                   </div>
                   <div>
-                    <p><a href="#proof"><span class="num-color">7.</span> Paula Duncan</a></p>
+                    <p><a href="#proof"><span class="num-color-teal">7.</span> Paula Duncan</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/Paula_Duncan.png" alt="Paula Duncan">  
                   </div>
                   <div>
-                    <p><a href="#frumpTheCook"><span class="num-color">8.</span> Imeral Lagost</a></p>
+                    <p><a href="#frumpTheCook"><span class="num-color-teal">8.</span> Imeral Lagost</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/Imeral_Lagost.png" alt="Imeral Lagost">  
                   </div>
                   <div>
-                    <p><a href="#cloaksToDieFor"><span class="num-color">9.</span> Lorlee Eclain</a></p>
+                    <p><a href="#cloaksToDieFor"><span class="num-color-teal">9.</span> Lorlee Eclain</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/Lorlee_Eclain.png" alt="Lorlee Eclain">  
                   </div>
                   <div>
-                    <p><a href="#war"><span class="num-color">10.</span> Captain of the Guard</a></p>
+                    <p><a href="#war"><span class="num-color-teal">10.</span> Captain of the Guard</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/Captain_of_the_Guard.png" alt="Captain of the Guard">  
                   </div>
                   <div>
-                    <p><a href="#curtisSecret"><span class="num-color">11.</span> Curtis Leabu</a></p>
+                    <p><a href="#curtisSecret"><span class="num-color-teal">11.</span> Curtis Leabu</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/Curtis_Leabu.png" alt="Curtis Leabu">  
                   </div>
                   <div>
-                    <p><a href="#daveysRattle"><span class="num-color">12.</span> Davey Logan</a></p>
+                    <p><a href="#daveysRattle"><span class="num-color-teal">12.</span> Davey Logan</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/Davey_Logan.png" alt="Davey Logan">  
                   </div>
                   <div>
-                    <p><a href="#aGoblinProblem"><span class="num-color">13.</span> Timothy Jager</a></p>
+                    <p><a href="#aGoblinProblem"><span class="num-color-teal">13.</span> Timothy Jager</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/Timothy_Jager.png" alt="Timothy Jager">  
                   </div>
                   <div>
-                    <p><a href="#hellHathNoFury"><span class="num-color">14.</span> A Young Maid</a></p>
+                    <p><a href="#hellHathNoFury"><span class="num-color-teal">14.</span> A Young Maid</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/A_Young_Maid.png" alt="A Young Maid">  
                   </div>
                   <div>
-                    <p><a href="#strangeRequest"><span class="num-color">15.</span> A Strange Looking Man</a></p>
+                    <p><a href="#strangeRequest"><span class="num-color-teal">15.</span> A Strange Looking Man</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/A_Strange_Looking_Man.png" alt="A Strange Looking Man">  
                   </div>
                   <div>
-                    <p><a href="#creaturesOfDransik"><span class="num-color">16.</span> Knight Bastrop</a></p>
+                    <p><a href="#creaturesOfDransik"><span class="num-color-teal">16.</span> Knight Bastrop</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/Knight_Bastrop.png" alt="Knight Bastrop">  
                   </div>
                   <div>
-                    <p><a href="#theAlchemistsApprentice"><span class="num-color">17.</span> Alchemist Baki</a></p>
+                    <p><a href="#theAlchemistsApprentice"><span class="num-color-teal">17.</span> Alchemist Baki</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/Alchemist_Baki.png" alt="Alchemist Baki">  
                   </div>
                   <div>
-                    <p><a href="#veratti"><span class="num-color">18.</span> Veratti</a></p>
+                    <p><a href="#veratti"><span class="num-color-teal">18.</span> Veratti</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/Veratti.png" alt="Veratti">  
                   </div>
                   <div>
-                    <p><a href="#ancientMagic"><span class="num-color">19.</span> Crazy Hermit</a></p>
+                    <p><a href="#ancientMagic"><span class="num-color-teal">19.</span> Crazy Hermit</a></p>
                     <img class="npc-img" src="Images/Valinor/NPCS/Crazy_Hermit.png" alt="Crazy Hermit">  
                   </div>
                 </div>  
