Added New Quest NPC Image.

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -242,7 +242,7 @@
                         <img class="npc-img" src="Images/BlackSwamp/Krog_Quest_Map_Location_1.png" alt="Krog Quest Map Location 1">
                       </div>
                       <div>
-                        <img class="npc-img" src="Images/Valinor/Maps/Valinor_Castle_Outside.png" alt="Valinor Castle Outside Map">
+                        <img class="npc-img" src="Images/BlackSwamp/Krog_Quest_Map_Location_2.png" alt="Krog Quest Map Location 2">
                       </div>                  
                     </div>
                   </div>                  
