Added Smad Map and Dunaga and Jeqa

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -236,14 +236,21 @@
                     </div>
                     <div class="flex-wrapper">
                       <div>
+                        <p class="text-center">Krog</p>
                         <img class="npc-img" src="Images/BlackSwamp/Krog_Quest_Map_Location.png" alt="Krog Quest Map Location">
                       </div>
                       <div>
+                        <p class="text-center">Krog Sewers</p>
                         <img class="npc-img" src="Images/BlackSwamp/Krog_Quest_Map_Location_1.png" alt="Krog Quest Map Location 1">
                       </div>
                       <div>
+                        <p class="text-center">Shadow Temple</p>
                         <img class="npc-img" src="Images/BlackSwamp/Krog_Quest_Map_Location_2.png" alt="Krog Quest Map Location 2">
-                      </div>                  
+                      </div>   
+                      <div> 
+                        <p class="text-center">Samad</p>
+                        <img class="npc-img" src="Images/BlackSwamp/Samad_Quest_Map_Location.png"  alt="Samad Quest Map Location">
+                      </div>                 
                     </div>
                   </div>                  
                 </div>
@@ -297,6 +304,14 @@
                   <div>
                     <p><a href="#agonsTest"><span class="num-color-teal">12.</span> Shadow of Agon</a></p>
                     <img class="npc-img" src="Images/BlackSwamp/Agons_Test_Shadow_of_Agon.png" alt="Shadow of Agon">  
+                  </div>
+                  <div>
+                    <p><a href="#paymentInFull"><span class="num-color-teal">13.</span> Dunaga</a></p>
+                    <img class="npc-img" src="Images/BlackSwamp/Payment_in_Full_Dunaga.png" alt="Dunaga">  
+                  </div>
+                  <div>
+                    <p><a href="#mokladIsMissing"><span class="num-color-teal">14.</span> Jeqa</a></p>
+                    <img class="npc-img" src="Images/BlackSwamp/Moklad_is_Missing_Jeqa.png" alt="Jeqa">  
                   </div>
                 </div> 
                 <hr>
