Updated Grab bags for Sept

--- a/index.html
+++ b/index.html
@@ -3319,10 +3319,12 @@
                       <div id="september2022" class="panel-collapse collapse">
                         <div class="panel-body accordion-border">
                             <ul class="light-grey-text">
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>1 Orb Reset</li>
+                                <li>1 Chest of Holding</li>
+                                <li>1 Rune Pack</li>
+                                <li>10 Summon Corpse</li>
+                                <li>10 Berserker Potion Packs</li>
+                                <li>1 Avatar Mask Pack</li>
                             </ul>
                         </div>
                       </div>
