added Maraket Quest Location Image

--- a/blackSwamp.html
+++ b/blackSwamp.html
@@ -250,7 +250,11 @@
                       <div> 
                         <p class="text-center">Samad</p>
                         <img class="npc-img" src="Images/BlackSwamp/Samad_Quest_Map_Location.png"  alt="Samad Quest Map Location">
-                      </div>                 
+                      </div>   
+                      <div> 
+                        <p class="text-center">Maraket</p>
+                        <img class="npc-img" src="Images/BlackSwamp/Maraket_Quest_Map_Location.png"  alt="Maraket Quest Map Location">
+                      </div>              
                     </div>
                   </div>                  
                 </div>
